fixed properties path and path in properties

--- a/build.default.properties
+++ b/build.default.properties
@@ -1,4 +1,4 @@
 project.name=FitsService
-tomcat.home=C:\workarea\tomcat
-jboss.home=C:\workarea\jboss
+tomcat.home=C:\\workarea\\tomcat
+jboss.home=C:\\workarea\\jboss
 jboss.config=default
