removed sourcepath, changed location of servlet api

--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/fits.jar" sourcepath="C:/eprojects/downloads/fits-0.2.6/fits-0.2.6/src"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/fits.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jdom.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
