--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="FitsServiceExample" default="deploy">
+<project name="TME Service" default="deploy">
 
 	<property file="build.properties" />
 	<property file="build.default.properties" />
