deploy dir in build.properties

--- a/build.default.properties
+++ b/build.default.properties
@@ -2,3 +2,5 @@ project.name=TME
 tomcat.home=C:\\workarea\\tomcat
 jboss.home=C:\\workarea\\jboss
 jboss.config=default
+#deploy.dir=${tomcat.home}/webapps
+deploy.dir=${jboss.home}/server/${jboss.config}/deploy
